2009-04-10  Zoltan Varga  <vargaz@gmail.com>

	* ArrayTest.cs: Add a test for ICollection:IsReadOnly on generic arrays.

2009-03-27  Zoltan Varga  <vargaz@gmail.com>

	* DelegateTest.cs: Mark a test as working.

2009-03-25  Jb Evain  <jbevain@novell.com>

	* DelegateTest.cs: add new CreateDelegate test.

2009-03-25  Jb Evain  <jbevain@novell.com>

	* DelegateTest.cs: add CreateDelegate tests for valuetype -> object
	conversion for arguments and return types.

2009-03-23  Zoltan Varga  <vargaz@gmail.com>

	* StringTest.cs (LastIndexOfStringComparison): Add a test for #486234.

2009-03-18  Zoltan Varga  <vargaz@gmail.com>

	* TypeTest.cs: Add more tests for user types.

2009-03-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* ConvertTest.cs: Avoid false positive in ChangeType test. 

2009-03-07  Gert Driesen  <drieseng@users.sourceforge.net>

	* ConvertTest.cs: Merged and improved test for bug #481687.
	* ConvertTest2.cs: Merged into ConvertTest.cs.

2009-02-27  Rodrigo Kumpera  <rkumpera@novell.com>

	* EnumTest.cs: Tests for CompareTo.

2009-02-02  Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeTest.cs: Add a test for #471255.

2009-01-27  Zoltan Varga  <vargaz@gmail.com>

	* TypeTest.cs: Add a test for #467229.

2009-01-06  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeTest.cs : added test for parsing no-millisecond time
	  with optional millisecond designator.

2008-11-25 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* TypeTest.cs: new test for Type.GetType.

2008-11-06  Bill Holmes  <billholmes54@gmail.com>

	* TypeTest.cs: TypeGetMemberReturnTypeTest added to check that the
	  instantiated type of the returned MemberInfo array matches the
	  MemberTypes flag passed in.

	Contributed under MIT/X11 license.

2008-10-07  Marek Habersack  <mhabersack@novell.com>

	* MathTest.cs: added tests for rounding doubles with truncation in
	the away from zero mode.

2008-09-25  Marek Habersack  <mhabersack@novell.com>
